--- a/EEG.html
+++ b/EEG.html
@@ -1,66 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>SkyNet Biometric Dashboard</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <!-- styles omitted for brevity, same as previous version -->
-</head>
-<body>
-
-<video id="camera" autoplay muted playsinline></video>
-<canvas id="overlay"></canvas>
-
-<div id="statusBadge">Analyzing</div>
-<button id="flipCameraBtn">Flip Camera</button>
-
-<div id="togglePanel">
-  <button class="icon-btn" id="btnThermal" title="Toggle thermal view">🌡️</button>
-  <button class="icon-btn" id="btnEEG" title="Toggle EEG thermal">🧠</button>
-  <button class="icon-btn" id="btnAnnotations" title="Toggle annotations">✳️</button>
-  <button class="icon-btn" id="btnSpectra" title="Toggle spectra">📈</button>
-  <button class="icon-btn" id="btnSnapshot" title="Capture snapshot">📸</button>
-</div>
-<div id="panelHandle">›</div>
-
-<div id="dashboardWrap">
-  <div class="dashboard">
-    <div class="panel"><h3>Heart Rate</h3><canvas id="rppgChart" class="chart"></canvas><div class="colorbar"></div></div>
-    <div class="panel"><h3>EEG</h3><canvas id="eegChart" class="chart"></canvas><div class="colorbar"></div></div>
-    <div class="panel"><h3>rPPG</h3><canvas id="rppgFFT" class="chart"></canvas></div>
-    <div class="panel">
-      <h3>Fusion</h3>
-      <div id="fusionOutput">
-        <div id="freqFusion">1. Frequency-Domain Fusion: 0 Hz</div>
-        <div id="peakFusion">2. Peak-Based Fusion: 0 Hz</div>
-        <div id="coherenceFusion">3. Cross-Spectral Coherence: 0</div>
-      </div>
-      <div id="fusionEq">
-        $$F_{\text{fusion}}(f) = \text{FFT}_{\text{EEG}}(f) + \text{FFT}_{\text{rPPG}}(f) + \text{FFT}_{\text{HR}}(f)$$
-      </div>
-    </div>
-    <div class="panel"><h3>CPU/GPU</h3><canvas id="sysFlow" class="chart"></canvas></div>
-  </div>
-</div>
-
-<div class="footer">
-  <div class="sliders">
-    <div class="slider-wrap" title="Smoothing"><div class="label">🎚️</div><input type="range" id="smoothing" min="0" max="1" step="0.1" value="0.5"></div>
-    <div class="slider-wrap" title="FFT window size"><div class="label">🪄</div><input type="range" id="fftWindow" min="128" max="1024" step="128" value="512"></div>
-    <div class="slider-wrap" title="Amplitude scale"><div class="label">🔊</div><input type="range" id="ampScale" min="1" max="5" step="0.5" value="1"></div>
-  </div>
-  <div class="right"><div id="countdown" title="Auto-save snapshot countdown">Next auto-save: 60s</div></div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
-<script>
-// ... all detection, chart, fusion, and PCAP code same as previous version ...
-
-// ✅ Screenshot fix: capture full dashboard including all charts + LaTeX
 async function captureDashboardPNG(customName=null){
   const target = document.getElementById('dashboardWrap');
   const canvas = await html2canvas(target, {
@@ -78,12 +15,45 @@ async function captureDashboardPNG(customName=null){
   link.click();
 }
 
-// ✅ PCAP payload already includes:
-// - Fusion metrics
-// - Multi-face IDs, bounding boxes, eyes, pixel arrays
-// - Device metadata
-// - CPU/GPU metrics
+function buildPayload(snapshotName, metrics, vision){
+  const nowISO=new Date().toISOString(); const meta=deviceMeta; const cpuBytes=getCPUMemoryBytes(); const gpu=gpuInfo;
+  const facesBlock = vision.entries.map(e => {
+    const leftEye = e.eyes.left ? `(${e.eyes.left.x},${e.eyes.left.y})` : "none";
+    const rightEye = e.eyes.right ? `(${e.eyes.right.x},${e.eyes.right.y})` : "none";
+    const pixelsStr = `[${e.pixels.join(',')}]`;
+    return `  - ${e.id}:
+    - Center: (${e.center.x}, ${e.center.y})
+    - Size: ${e.size}
+    - Box: ${e.box.w} × ${e.box.h}
+    - Left Eye: ${leftEye}
+    - Right Eye: ${rightEye}
+    - Pixels: ${pixelsStr}`;
+  }).join('\n');
 
-</script>
-</body>
-</html>
+  return `
+Snapshot Filename: ${snapshotName}
+Timestamp: ${nowISO}
+Device IP Address: ${deviceIP}
+Device Metadata:
+- User Agent: ${meta.userAgent}
+- Platform: ${meta.platform}
+- Language: ${meta.language}
+- Screen Resolution: ${meta.screenResolution}
+- Color Depth: ${meta.colorDepth}
+- Timezone: ${meta.timeZone}
+Fusion Metrics:
+- Frequency-Domain Fusion: ${metrics.freqFusion} Hz
+- Peak-Based Fusion: ${metrics.peakFusion} Hz
+- Cross-Spectral Coherence: ${metrics.coherence}
+Vision Metrics:
+- Face Count: ${vision.faces}
+- Avg Confidence: ${vision.avgConfidence}
+- Faces:
+${facesBlock || '  - none'}
+Browser Resource Metrics:
+- CPU Memory Bytes: ${cpuBytes}
+- GPU Memory Bytes: ${gpu.gpuMemoryBytes}
+- GPU Vendor: ${gpu.gpuVendor}
+- GPU Renderer: ${gpu.gpuRenderer}
+`.trim();
+}
