--- a/EEG.html
+++ b/EEG.html
@@ -1,191 +1,321 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>SkyNet Biometric Dashboard</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>SkyNet Biometric Dashboard — Debug</title>
+
+  <!-- Minimal styles to restore the intended layout -->
   <style>
-    :root {
-      --bg: #000;
-      --fg: #fff;
-      --panel-bg: rgba(255,255,255,0.06);
-      --accent: #39FF14;
+    :root{
+      --panel-gap: 12px;
+      --bg: #0b0b0b;
+      --panel-bg: rgba(255,255,255,0.035);
+      --accent: #00d1ff;
+      --text: #eee;
     }
-    body {
-      margin: 0;
-      background: var(--bg);
-      color: var(--fg);
-      font-family: Arial, sans-serif;
-      overflow: hidden;
+    html,body{
+      height:100%;
+      margin:0;
+      background:linear-gradient(#ffffff,#ffffff);
+      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      color:var(--text);
     }
-    #camera, #overlay {
-      position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: 0;
+
+    /* Top viewport: camera + overlay */
+    #cameraWrap{
+      position:relative;
+      width:100%;
+      height:40vh; /* adjust for mobile */
+      min-height:240px;
+      background:#111;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow:hidden;
     }
-    #overlay { z-index: 1; pointer-events: none; }
-    #statusBadge {
-      position: fixed;
-      top: 12px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 6;
-      background: rgba(0,0,0,0.55);
-      color: var(--accent);
-      padding: 8px 20px;
-      border-radius: 8px;
-      font-weight: 800;
+    video#camera{
+      position:absolute;
+      top:0; left:0;
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      z-index:1;
+      background:#000;
+      transform: scaleX(1); /* flipped when using front camera if needed */
     }
-    #flipCameraBtn {
-      position: fixed;
-      top: 12px;
-      right: 12px;
-      z-index: 6;
-      background: rgba(0,0,0,0.55);
-      color: #fff;
-      padding: 8px 12px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 700;
+    canvas#overlay{
+      position:absolute;
+      top:0; left:0;
+      width:100%;
+      height:100%;
+      pointer-events:none;
+      z-index:2;
+      mix-blend-mode:screen;
     }
-    #dashboardWrap {
-      position: relative;
-      z-index: 2;
-      width: 100%;
-      height: calc(100vh - 110px);
-      margin-top: 64px;
-      overflow-y: auto;
+
+    /* small controls over the video */
+    #statusBadge{
+      position:absolute;
+      top:12px;
+      left:14px;
+      z-index:5;
+      background:rgba(255,255,255,0.95);
+      color:#111;
+      padding:6px 10px;
+      border-radius:8px;
+      font-weight:600;
+      box-shadow:0 2px 8px rgba(0,0,0,0.2);
     }
-    .dashboard {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 10px;
-      width: 95%;
-      max-width: 1300px;
-      margin: 0 auto;
+    #flipCameraBtn{
+      position:absolute;
+      top:12px;
+      left:140px;
+      z-index:5;
+      padding:6px 10px;
+      border-radius:8px;
+      border:0;
+      background:#fff;
+      color:#111;
+      font-weight:600;
+      box-shadow:0 2px 8px rgba(0,0,0,0.12);
     }
-    .panel {
-      background: var(--panel-bg);
-      border-radius: 10px;
-      padding: 10px;
+
+    /* dashboard grid */
+    #dashboardWrap{
+      padding:16px;
+      box-sizing:border-box;
     }
-    canvas.chart {
-      width: 100%;
-      height: 220px;
+    .dashboard{
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: var(--panel-gap);
+      align-items:start;
     }
-    #fusionEq {
-      margin-top: 8px;
-      text-align: center;
-      font-size: 20px;
+    .panel{
+      background:var(--panel-bg);
+      border-radius:12px;
+      padding:12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+      min-height:160px;
+      color:#111;
+      background:white;
     }
-    .footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      z-index: 3;
-      background: rgba(0,0,0,0.35);
-      padding: 10px 12px;
-      display: grid;
-      grid-template-columns: 1fr auto;
-      gap: 8px;
+    .panel h3{
+      margin:0 0 8px 0;
+      font-size:1.25rem;
+      color:#111;
     }
-    .footer .sliders {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      gap: 10px;
+    .chart{
+      width:100% !important;
+      height:180px !important;
+      display:block;
     }
-    @media (max-width: 600px) {
-      .footer .sliders { grid-template-columns: 1fr; }
+
+    /* footer sliders */
+    .footer{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:8px 16px 36px 16px;
+      gap:12px;
     }
-    @media (min-width: 768px) {
-      .dashboard { grid-template-columns: 1fr 1fr; }
-    }
-    @media (min-width: 1200px) {
-      .dashboard { grid-template-columns: 1fr 1fr 1fr; }
+    .sliders{display:flex; gap:12px;}
+    .slider-wrap{display:flex; align-items:center; gap:8px;}
+    input[type=range]{width:140px;}
+
+    /* small responsive tweaks */
+    @media (max-width:520px){
+      video#camera{height:100%}
+      canvas#overlay{height:100%}
+      .panel h3{font-size:1.05rem}
+      .chart{height:140px !important}
     }
   </style>
 </head>
 <body>
 
-<video id="camera" autoplay muted playsinline></video>
-<canvas id="overlay"></canvas>
+  <div id="cameraWrap">
+    <video id="camera" autoplay muted playsinline></video>
+    <canvas id="overlay"></canvas>
 
-<div id="statusBadge">Analyzing</div>
-<button id="flipCameraBtn">Flip Camera</button>
+    <div id="statusBadge">Analyzing</div>
+    <button id="flipCameraBtn" aria-label="Flip Camera">Flip Camera</button>
+  </div>
 
-<div id="dashboardWrap">
-  <div class="dashboard">
-    <div class="panel"><h3>Heart Rate</h3><canvas id="rppgChart" class="chart"></canvas></div>
-    <div class="panel"><h3>EEG</h3><canvas id="eegChart" class="chart"></canvas></div>
-    <div class="panel"><h3>rPPG</h3><canvas id="rppgFFT" class="chart"></canvas></div>
-    <div class="panel">
-      <h3>Fusion</h3>
-      <div id="fusionOutput">
-        <div id="freqFusion">1. Frequency-Domain Fusion: 0 Hz</div>
-        <div id="peakFusion">2. Peak-Based Fusion: 0 Hz</div>
-        <div id="coherenceFusion">3. Cross-Spectral Coherence: 0</div>
+  <div id="dashboardWrap">
+    <div class="dashboard">
+      <div class="panel"><h3>Heart Rate</h3><canvas id="rppgChart" class="chart"></canvas></div>
+      <div class="panel"><h3>EEG</h3><canvas id="eegChart" class="chart"></canvas></div>
+      <div class="panel"><h3>rPPG FFT</h3><canvas id="rppgFFT" class="chart"></canvas></div>
+      <div class="panel">
+        <h3>Fusion</h3>
+        <div id="fusionOutput">
+          <div id="freqFusion">1. Frequency-Domain Fusion: 0 Hz</div>
+          <div id="peakFusion">2. Peak-Based Fusion: 0 Hz</div>
+          <div id="coherenceFusion">3. Cross-Spectral Coherence: 0</div>
+        </div>
+        <div id="fusionEq" style="margin-top:8px; font-size:0.9rem; color:#444;">
+          F<sub>fusion</sub>(f) = FFT<sub>EEG</sub>(f) + FFT<sub>rPPG</sub>(f) + FFT<sub>HR</sub>(f)
+        </div>
       </div>
-      <div id="fusionEq">
-        $$F_{\text{fusion}}(f) = \text{FFT}_{\text{EEG}}(f) + \text{FFT}_{\text{rPPG}}(f) + \text{FFT}_{\text{HR}}(f)$$
-      </div>
+      <div class="panel"><h3>CPU/GPU</h3><canvas id="sysFlow" class="chart"></canvas></div>
     </div>
-    <div class="panel"><h3>CPU/GPU</h3><canvas id="sysFlow" class="chart"></canvas></div>
+
+    <!-- footer controls -->
+    <div class="footer">
+      <div class="sliders">
+        <div class="slider-wrap" title="Smoothing"><div class="label">🎚️</div><input type="range" id="smoothing" min="0" max="1" step="0.1" value="0.5"></div>
+        <div class="slider-wrap" title="FFT window size"><div class="label">🪄</div><input type="range" id="fftWindow" min="128" max="1024" step="128" value="512"></div>
+        <div class="slider-wrap" title="Amplitude scale"><div class="label">🔊</div><input type="range" id="ampScale" min="1" max="5" step="0.5" value="1"></div>
+      </div>
+      <div class="right"><div id="countdown" title="Auto-save snapshot countdown">Next auto-save: 60s</div></div>
+    </div>
   </div>
-</div>
 
-<div class="footer">
-  <div class="sliders">
-    <div class="slider-wrap"><div class="label">🎚️</div><input type="range" id="smoothing" min="0" max="1" step="0.1" value="0.5"></div>
-    <div class="slider-wrap"><div class="label">🪄</div><input type="range" id="fftWindow" min="128" max="1024" step="128" value="512"></div>
-    <div class="slider-wrap"><div class="label">🔊</div><input type="range" id="ampScale" min="1" max="5" step="0.5" value="1"></div>
-  </div>
-  <div class="right"><div id="countdown">Next auto-save: 60s</div></div>
-</div>
+  <!-- libs -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <script>
+    // ---------- helpers ----------
+    function sleep(ms){ return new Promise(r=>setTimeout(r,ms)); }
 
-<script>
-// Camera init + flip
-let facingMode = "user";
-function startCamera() {
-  navigator.mediaDevices.getUserMedia({ video: { facingMode }, audio: false })
-    .then(stream => { document.getElementById('camera').srcObject = stream; })
-    .catch(err => { console.error("Camera error:", err); });
-}
-startCamera();
-document.getElementById('flipCameraBtn').addEventListener('click', () => {
-  facingMode = (facingMode === "user") ? "environment" : "user";
-  startCamera();
-});
+    // ---------- Camera start & flip ----------
+    let currentStream = null;
+    let useFacingMode = 'environment'; // start with back camera on mobiles
+    async function startCamera(){
+      try {
+        if (currentStream){
+          currentStream.getTracks().forEach(t=>t.stop());
+          currentStream = null;
+        }
+        const constraints = {
+          audio: false,
+          video: { facingMode: useFacingMode, width: { ideal: 1280 }, height: { ideal: 720 } }
+        };
+        currentStream = await navigator.mediaDevices.getUserMedia(constraints);
+        const video = document.getElementById('camera');
+        video.srcObject = currentStream;
+        await video.play();
+        // make overlay canvas pixel-size match video
+        resizeOverlay();
+      } catch (err){
+        console.error('camera start err', err);
+        document.getElementById('statusBadge').innerText = 'Camera access denied';
+      }
+    }
+    document.getElementById('flipCameraBtn').addEventListener('click', async ()=>{
+      // toggle
+      useFacingMode = (useFacingMode === 'user') ? 'environment' : 'user';
+      await startCamera();
+      // flip visual if using front camera
+      const video = document.getElementById('camera');
+      video.style.transform = useFacingMode === 'user' ? 'scaleX(-1)' : 'scaleX(1)';
+    });
 
-// Screenshot fix: capture full dashboard including all charts + LaTeX
-async function captureDashboardPNG(customName=null){
-  const target = document.getElementById('dashboardWrap');
-  const canvas = await html2canvas(target, {
-    useCORS: true,
-    logging: false,
-    scale: 1,
-    scrollY: -window.scrollY,
-    windowWidth: document.documentElement.scrollWidth,
-    windowHeight: document.documentElement.scrollHeight
-  });
-  const link=document.createElement('a');
-  const fname=customName || `dashboard_${new Date().toISOString().replace(/[:.]/g,'-')}.png`;
-  link.download=fname;
-  link.href=canvas.toDataURL('image/png');
-  link.click();
-}
+    function resizeOverlay(){
+      const video = document.getElementById('camera');
+      const canvas = document.getElementById('overlay');
+      if (!video || !canvas) return;
+      // set canvas pixel size to match displayed size for crisp drawing
+      const rect = video.getBoundingClientRect();
+      canvas.width = Math.round(rect.width * devicePixelRatio);
+      canvas.height = Math.round(rect.height * devicePixelRatio);
+      canvas.style.width = rect.width + 'px';
+      canvas.style.height = rect.height + 'px';
+    }
+    window.addEventListener('resize', resizeOverlay);
 
-// Example chart init
-const rppgCtx=document.getElementById('rppgChart').getContext('2d');
-const rppgChart=new Chart(rppgCtx,{type:'line',data:{labels:[],datasets:[{label:'Heart Rate',data:[]}]},options:{responsive:true}});
-</script>
+    // ---------- Chart init ----------
+    const charts = {};
+    function createPlaceholderChart(ctx, label){
+      return new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: Array.from({length:60}, (_,i)=>i),
+          datasets: [{
+            label,
+            data: Array.from({length:60}, ()=> Math.random()*20 + 30),
+            borderWidth: 2,
+            tension: 0.3,
+            pointRadius: 0
+          }]
+        },
+        options: {
+          animation:false,
+          responsive:true,
+          maintainAspectRatio:false,
+          scales: {
+            x: { display:false },
+            y: { beginAtZero:true }
+          },
+          plugins: { legend:{display:false} }
+        }
+      });
+    }
+
+    function initCharts(){
+      charts.rppg = createPlaceholderChart(document.getElementById('rppgChart').getContext('2d'),'Heart Rate');
+      charts.eeg = createPlaceholderChart(document.getElementById('eegChart').getContext('2d'),'EEG');
+      charts.fft = createPlaceholderChart(document.getElementById('rppgFFT').getContext('2d'),'rPPG FFT');
+      charts.sys = createPlaceholderChart(document.getElementById('sysFlow').getContext('2d'),'CPU/GPU');
+    }
+
+    // small tick to update charts with fake data so you see something realtime
+    function tickFakeData(){
+      for (const k in charts){
+        const ch = charts[k];
+        const ds = ch.data.datasets[0];
+        ds.data.push(Math.max(0, ds.data[ds.data.length-1] + (Math.random()-0.45)*6));
+        if (ds.data.length>60) ds.data.shift();
+        ch.update('none');
+      }
+      requestAnimationFrame(tickFakeData);
+    }
+
+    // ---------- Screenshot fix + template literal bug fix ----------
+    async function captureDashboardPNG(customName=null){
+      const target = document.getElementById('dashboardWrap');
+
+      // wait a moment for layout & MathJax if present
+      await sleep(120);
+
+      const canvas = await html2canvas(target, {
+        useCORS: true,
+        logging:false,
+        scale: Math.min(2, window.devicePixelRatio || 1),
+        scrollY: -window.scrollY,
+        windowWidth: document.documentElement.scrollWidth,
+        windowHeight: document.documentElement.scrollHeight
+      });
+
+      const link = document.createElement('a');
+      const fname = customName || `dashboard_${new Date().toISOString().replace(/[:.]/g,'-')}.png`;
+      link.download = fname;
+      link.href = canvas.toDataURL('image/png');
+      link.click();
+    }
+
+    // ---------- App init ----------
+    async function initApp(){
+      try {
+        initCharts();
+        tickFakeData();
+        await startCamera();
+        resizeOverlay();
+        // if MathJax is used and you rely on it in screenshot, you can wait for it:
+        if (window.MathJax && MathJax.typesetPromise) {
+          try { await MathJax.typesetPromise(); } catch(e){/*ignore*/ }
+        }
+      } catch (err){ console.error(err); }
+    }
+
+    // run on load
+    window.addEventListener('load', ()=>{ initApp(); });
+
+    // expose capture to console for quick tests
+    window.captureDashboardPNG = captureDashboardPNG;
+  </script>
 </body>
 </html>
